sourcery-macros/tests/ui/fail/projection_kind_non_string.stderr
error: Unexpected type `path`
  --> tests/ui/fail/projection_kind_non_string.rs:11:21
   |
11 | #[projection(kind = AccountLedger)]
   |                     ^^^^^^^^^^^^^
